messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
  labels:
    app: messaging-app
spec:
  selector:
    app: messaging-app
    version: blue
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-blue-service
  labels:
    app: messaging-app
    version: blue
spec:
  selector:
    app: messaging-app
    version: blue
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-green-service
  labels:
    app: messaging-app
    version: green
spec:
  selector:
    app: messaging-app
    version: green
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
